Release 1.6.11
